--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Get a KeyGet a KeyGet a Key<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -231,7 +231,8 @@
 	// Array of API keys for rotation
 	const apiKeys = [
 		'AIzaSyC1dJFqnh9aU3XzT0atBz9jm7PpU58IKf0',
-		'AIzaSyAC9XwXC7PC_gq1Rv1ImrLoM28hShlscDo'
+		'AIzaSyAC9XwXC7PC_gq1Rv1ImrLoM28hShlscDo',
+		'AIzaSyAmIVZk_swF9RQ-6mmp-jJa03njc-MKyfM'
 	];
 	let currentApiKeyIndex = 0;
 
