--- a/index.html
+++ b/index.html
@@ -248,6 +248,19 @@
 
 	// Global variable to store the current domain(s)
 	let currentDomains = [];
+	let userAgents = [];
+
+	async function fetchUserAgents() {
+    const response = await fetch('https://raw.githubusercontent.com/Vulnpire/bounty-search-engine/main/utils/user-agents.txt');
+    const text = await response.text();
+    userAgents = text.split('\n').filter(ua => ua.trim().length > 0);
+}
+
+	// Get a random user agent
+	function getRandomUserAgent() {
+		return userAgents[Math.floor(Math.random() * userAgents.length)];
+	}
+
 
 	// Function to perform search with pagination
 	async function performSearch(startIndex = 1, query = null) {
@@ -273,14 +286,19 @@
 		setTimeout(async () => {
 		    const apiKey = getCurrentApiKey();
 		    const cx = '759aed2f7b4be4b83'; // Replace with your CSE ID
-		    const url = `https://www.googleapis.com/customsearch/v1?q=${encodeURIComponent(query)}&key=${apiKey}&cx=${cx}&start=${startIndex}`;
+		    const googleApiUrl = `https://www.googleapis.com/customsearch/v1?q=${encodeURIComponent(query)}&key=${apiKey}&cx=${cx}&start=${startIndex}`;
+		    const proxyUrl = `https://api.allorigins.win/get?url=${encodeURIComponent(googleApiUrl)}`;
 
 		    try {
-		        const response = await fetch(url);
+		        const response = await fetch(proxyUrl);
+		        if (!response.ok) {
+		            throw new Error('Network response was not ok');
+		        }
 		        const data = await response.json();
+		        const jsonData = JSON.parse(data.contents);
 
 		        // Check for quota exceeded error
-		        if (response.status === 403 || (data.error && data.error.code === 403)) {
+		        if (jsonData.error && jsonData.error.code === 429) {
 		            // Switch to the next API key
 		            switchApiKey();
 		            // Retry the request with the next API key
@@ -288,9 +306,9 @@
 		            return;
 		        }
 
-		        if (data.items) {
-		            displayResults(data.items);
-		            setupPaginationControls(data.queries, startIndex, query);
+		        if (jsonData.items) {
+		            displayResults(jsonData.items);
+		            setupPaginationControls(jsonData.queries, startIndex, query);
 		        } else {
 		            resultsContainer.innerHTML = '<p>No results found.</p>';
 		        }
@@ -299,6 +317,7 @@
 		    }
 		}, delay);
 	}
+
 
 	// Display search results
 	function displayResults(items) {
