--- a/index.html
+++ b/index.html
@@ -171,6 +171,56 @@
             gap: 10px;
         }
 
+        .domain-label {
+            color: #00ff00;
+            font-size: 1.3em;
+            margin-right: 10px;
+        }
+
+        .domain-input {
+            border: 2px solid #00ff00;
+            background-color: #333;
+            color: #00ff00;
+            font-family: 'Courier New', Courier, monospace;
+            padding: 10px;
+            width: calc(80% - 60px); /* Adjust the width to maintain alignment */
+            display: inline-block; /* Ensure the input box and button stay on the same line */
+            vertical-align: middle; /* Align vertically with the button */
+        }
+
+        #updateDomainButton {
+            border: 2px solid #00ff00;
+            background-color: #1a1a1a;
+            color: #00ff00;
+            font-family: 'Courier New', Courier, monospace;
+            padding: 10px 20px;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+            margin-left: 20px; /* Increase the margin to create more space */
+            margin-top: 10px; /* Adjust top margin to center vertically */
+        }
+
+
+        #updateDomainButton:hover {
+            background-color: #00ff00;
+            color: #1a1a1a;
+        }
+
+        #updateDomainButton {
+            border: 2px solid #00ff00;
+            background-color: #1a1a1a;
+            color: #00ff00;
+            font-family: 'Courier New', Courier, monospace;
+            padding: 7px 20px;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+        }
+
+        #updateDomainButton:hover {
+            background-color: #00ff00;
+            color: #1a1a1a;
+        }
+
         .pagination-controls button {
             background-color: #1a1a1a;
             color: #00ff00;
@@ -206,9 +256,10 @@
         <p>
             <a href="https://github.com/Vulnpire/bounty-search-engine" target="_blank">GitHub Repo</a><br><br>
         </p>
-        <label for="domainInput">Enter a domain:</label>
-        <input type="text" id="domainInput" placeholder="example.com">
-        <button id="updateDomainButton">Update Domain</button>
+        <div class="search-container">
+            <input type="text" id="domainInput" class="search-input" placeholder="Enter domain...">
+            <button id="updateDomainButton" class="search-button">Update Domain</button>
+        </div>
         <ul id="dorkList"></ul>
     </div>
 
@@ -249,61 +300,61 @@
     // Global variable to store the current domain(s)
     let currentDomains = [];
 
-// Function to perform search with pagination
-async function performSearch(startIndex = 1, query = null) {
-    if (!query) {
-        query = document.getElementById("searchInput").value;
-    }
-    const resultsContainer = document.getElementById("resultsContainer");
-    resultsContainer.innerHTML = '';
-
-    if (!query) {
-        resultsContainer.innerHTML = '<p>Please enter a search term.</p>';
-        return;
-    }
-
-    // Replace example.com with the user-provided domain(s)
-    if (currentDomains.length > 0) {
-        query = currentDomains.map(domain => query.replace(/example\.com/g, domain)).join(' OR ');
-    }
-
-    // Anti-Bot Delay
-    const delay = Math.floor(Math.random() * 1000);
-
-    setTimeout(async () => {
-        const apiKey = getCurrentApiKey();
-        const cx = '759aed2f7b4be4b83'; // Replace with your CSE ID
-        const googleApiUrl = `https://www.googleapis.com/customsearch/v1?q=${encodeURIComponent(query)}&key=${apiKey}&cx=${cx}&start=${startIndex}`;
-        const proxyUrl = `https://api.allorigins.win/get?url=${encodeURIComponent(googleApiUrl)}`;
-
-        try {
-            const response = await fetch(proxyUrl);
-            if (!response.ok) {
-                throw new Error('Network response was not ok');
-            }
-            const data = await response.json();
-            const jsonData = JSON.parse(data.contents);
-
-            // Check for quota exceeded error
-            if (jsonData.error && jsonData.error.code === 429) {
-                // Switch to the next API key
-                switchApiKey();
-                // Retry the request with the next API key
-                performSearch(startIndex, query);
-                return;
-            }
-
-            if (jsonData.items) {
-                displayResults(jsonData.items);
-                setupPaginationControls(jsonData.queries, startIndex, query);
-            } else {
-                resultsContainer.innerHTML = '<p>No results found.</p>';
-            }
-        } catch (error) {
-            resultsContainer.innerHTML = `<p>Error fetching search results: ${error.message}</p>`;
+    // Function to perform search with pagination
+    async function performSearch(startIndex = 1, query = null) {
+        if (!query) {
+            query = document.getElementById("searchInput").value;
         }
-    }, delay);
-}
+        const resultsContainer = document.getElementById("resultsContainer");
+        resultsContainer.innerHTML = '';
+
+        if (!query) {
+            resultsContainer.innerHTML = '<p>Please enter a search term.</p>';
+            return;
+        }
+
+        // Replace example.com with the user-provided domain(s)
+        if (currentDomains.length > 0) {
+            query = currentDomains.map(domain => query.replace(/example\.com/g, domain)).join(' OR ');
+        }
+
+        // Anti-Bot Delay
+        const delay = Math.floor(Math.random() * 1000);
+
+        setTimeout(async () => {
+            const apiKey = getCurrentApiKey();
+            const cx = '759aed2f7b4be4b83'; // Replace with your CSE ID
+            const googleApiUrl = `https://www.googleapis.com/customsearch/v1?q=${encodeURIComponent(query)}&key=${apiKey}&cx=${cx}&start=${startIndex}`;
+            const proxyUrl = `https://api.allorigins.win/get?url=${encodeURIComponent(googleApiUrl)}`;
+
+            try {
+                const response = await fetch(proxyUrl);
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                const data = await response.json();
+                const jsonData = JSON.parse(data.contents);
+
+                // Check for quota exceeded error
+                if (jsonData.error && jsonData.error.code === 429) {
+                    // Switch to the next API key
+                    switchApiKey();
+                    // Retry the request with the next API key
+                    performSearch(startIndex, query);
+                    return;
+                }
+
+                if (jsonData.items) {
+                    displayResults(jsonData.items);
+                    setupPaginationControls(jsonData.queries, startIndex, query);
+                } else {
+                    resultsContainer.innerHTML = '<p>No results found.</p>';
+                }
+            } catch (error) {
+                resultsContainer.innerHTML = `<p>Error fetching search results: ${error.message}</p>`;
+            }
+        }, delay);
+    }
 
     // Display search results
     function displayResults(items) {
@@ -352,25 +403,25 @@ async function performSearch(startIndex = 1, query = null) {
         paginationControls.appendChild(nextButton);
     }
 
-    // Event listeners for search
-    document.getElementById("searchButton").addEventListener("click", () => {
-        currentPage = 1;
-        performSearch(currentPage);
-    });
-
-    document.getElementById("domainInput").addEventListener("keypress", function(event) {
-        if (event.key === "Enter") {
-            updateDomain();
+    // Event listener for search button
+    document.getElementById("searchButton").addEventListener("click", function(event) {
+        event.preventDefault();
+        const searchInput = document.getElementById("searchInput").value.trim();
+        if (searchInput !== '') {
             currentPage = 1;
-            performSearch(currentPage);
+            performSearch(currentPage, searchInput);
         }
     });
 
-
-    document.getElementById("searchInput").addEventListener("keypress", (event) => {
+    // Event listener for Enter key in search input
+    document.getElementById("searchInput").addEventListener("keypress", function(event) {
         if (event.key === "Enter") {
-            currentPage = 1;
-            performSearch(currentPage);
+            event.preventDefault();
+            const searchInput = this.value.trim();
+            if (searchInput !== '') {
+                currentPage = 1;
+                performSearch(currentPage, searchInput);
+            }
         }
     });
 
@@ -437,11 +488,13 @@ async function performSearch(startIndex = 1, query = null) {
         return listItem;
     }
 
+
+    // Update domain function
     function updateDomain() {
         const domainInput = document.getElementById("domainInput");
         currentDomains = domainInput.value.split(",").map(domain => domain.trim());
 
-        // Update the dork links with the new domains
+        // Update dork links with new domains
         const dorkLinks = document.querySelectorAll(".dorkLink");
         dorkLinks.forEach((link, index) => {
             const originalDork = originalDorks[index];
@@ -451,39 +504,31 @@ async function performSearch(startIndex = 1, query = null) {
             link.textContent = updatedDork;
         });
 
-        // Update the search input with the new domain, but do not trigger search automatically
-        const searchInput = document.getElementById("searchInput");
-        searchInput.value = currentDomains.length > 0 ? currentDomains.join(' OR ') : '';
-
+        // Clear search results
         clearSearchResults();
     }
 
+    // Clear search results function
     function clearSearchResults() {
         const resultsContainer = document.getElementById("resultsContainer");
         resultsContainer.innerHTML = '';
     }
 
-// Event listener for dork links
-document.querySelectorAll(".dorkLink").forEach(link => {
-    link.addEventListener("click", function(event) {
+    document.getElementById("domainInput").addEventListener("keypress", function(event) {
+        if (event.key === "Enter") {
+            event.preventDefault();
+            updateDomain();
+        }
+    });
+
+
+    // Event listener for "Update Domain" button
+    document.getElementById("updateDomainButton").addEventListener("click", function(event) {
         event.preventDefault();
-        const updatedDork = this.textContent.trim();
-        const searchInput = document.getElementById("searchInput");
-        searchInput.value = updatedDork;
-
-        // Perform search with updated dork
-        currentPage = 1;
-        performSearch(currentPage);
-    });
-});
-
-
-
-    document.getElementById("updateDomainButton").addEventListener("click", () => {
         updateDomain();
-        currentPage = 1;
-        performSearch(currentPage);
     });
 
+    // Fetch dorks on page load
     fetchDorks();
+
 </script>
